# rbx-mcp

./: .gitignore  Cargo.toml  README.md  output.rbxlx
src/: cli.rs  gemini_api.rs  lib.rs  main.rs  output.rbxlx  roblox.rs
