[package]
name = "roblox-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.35"
dotenv = "0.15.0"
rbx_dom_weak = "3.0.0"
rbx_xml = "1.0.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
warp = "0.3.7"
